# moltbook-agent-guard

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  Makefile  QUICKSTART.md  README.md  SECURITY.md  agent_config.template.yaml  docker-compose.yml  moltbook  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security_pattern.md
.streamlit/: config.toml  secrets.toml.example
archetypes/comedian/: config.json
archetypes/curator/: config.json
archetypes/moderator/: config.json
archetypes/philosopher/: config.json
archetypes/researcher/: config.json
archetypes/teacher/: config.json
dashboard/: Dockerfile  app.py  requirements.txt  streamlit_app.py
dashboard-tools/: __init__.py
dashboard-tools/content_gen/: __init__.py  generator.py  templates.py
dashboard-tools/screenshots/: __init__.py  capture.py
dashboard-tools/slack_bot/: __init__.py  bot.py
dashboard-tools/tracker/: __init__.py  activity_tracker.py  metrics.py
dashboard/static/: style.css
dashboard/templates/: index.html
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md
examples/: quickstart.py  sample_personalities.py
gallery/: README.md
gallery/agents/: curator-prime.md  professor-arc.md  sentinel-7.md  wit-9000.md
integrations/: README.md
integrations/moltbrain/: README.md
integrations/multi-agent/: README.md  example_research_team.py
integrations/rag/: README.md  example_rag_agent.py
security/: SECURITY_CHECKLIST.md
security/hardened-docker/: Dockerfile.hardened  docker-compose.hardened.yml
security/known-attacks/: catalog.md
tests/: __init__.py  test_agent_runtime.py  test_comprehensive.py  test_scanner.py
tools/: __init__.py
tools/agent/: __init__.py  llm.py  moltbook_api.py  runtime.py
tools/cost_calculator/: __init__.py
tools/injection_scanner/: __init__.py
tools/moltbook_cli/: __init__.py  cli.py  scanner.py
tools/moltbook_cli/commands/: claim.py  cost.py  deploy.py  init.py  observatory.py  scan.py  security.py  status.py
tools/notifications/: __init__.py
tools/observatory/: __init__.py
tools/security/: __init__.py  action_authorization.py  ai_firewall.py  audit_trail.py  behavioral_fingerprint.py  config.py  content_provenance.py  context_isolator.py  credential_monitor.py  egress_firewall.py  error_sanitizer.py  exfiltration_prevention.py  financial_safety.py  interaction_analyzer.py  link_safety.py  log_redactor.py  memory_sanitizer.py  output_scanner.py  rate_limiter.py  reputation_protection.py  secrets_manager.py  skill_verifier.py  social_engineering.py  submolt_safety.py
tutorials/: 01_why_moltbook.md  02_secure_setup.ipynb  03_first_agent.ipynb  04_agent_personality.ipynb  05_teacher_agent.ipynb  06_prompt_injection_defense.ipynb  07_cost_management.ipynb  08_production_agent.ipynb
